# Books-topic-modeling

./: .gitignore  README.md  dvc.yaml  params.yaml  pyproject.toml
app/: make_datamap.py  streamlit_app.py
config/: datasets.yaml
src/book_atlas/: __init__.py  build_documents.py  cluster.py  embed.py  embed_backend.py  evaluate.py  freeze_dataset.py  fuse.py  ingest.py  label.py  llm.py  reduce.py  reviews.py  select_stratified.py  utils.py
tests/: test_pipeline.py
