[project]
name = "semantic-book-atlas"
version = "0.5.0"
description = "Cluster 5,000 stratified Goodreads books (content + reviews) with OpenAI embeddings -> UMAP/densMAP -> HDBSCAN."
requires-python = ">=3.11"
dependencies = [
  "polars>=1.25",
  "pyarrow>=15",
  "numpy>=1.26",
  "pyyaml>=6",
  "tqdm>=4.66",
  "scikit-learn>=1.4",
  "umap-learn>=0.5.6",
  "hdbscan>=0.8.36",
  "optuna>=3.6",
  "openai>=1.40",
  "python-dotenv>=1.0",
  "datamapplot>=0.3",
  "streamlit>=1.36",
  "plotly>=5.20",
]

[project.optional-dependencies]
# Only needed for embedding.backend: local (Qwen3 on your RTX 4050).
# Keeping torch OUT of core deps makes `uv pip install -e .` match the
# runbook's "no torch" promise and saves a multi-GB install.
local = ["sentence-transformers>=3.0", "torch>=2.2"]
# c_v coherence metric in evaluate (gensim pins numpy<2 / scipy<1.14 — keep it
# optional; evaluate degrades gracefully to coherence_cv=null without it).
eval = ["gensim>=4.3"]
extra = ["duckdb>=1.0", "dvc>=3.50"]
dev = ["pytest>=8"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
